manifests/dev/berg/Deployment-berg-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: berg
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: berg
    component: frontend
  name: berg-frontend
  namespace: berg
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: berg
      app.kubernetes.io/name: berg
      component: frontend
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: berg
        app.kubernetes.io/name: berg
        component: frontend
    spec:
      containers:
        - image: ghcr.io/norelect/berg/frontend:5.13.4
          imagePullPolicy: IfNotPresent
          name: berg-frontend
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "1"
              memory: 500Mi
            requests:
              cpu: "0.2"
              memory: 100Mi
