manifests/dev/berg/Service-berg-api.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: berg
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: berg
    app.kubernetes.io/version: 5.13.4
    helm.sh/chart: berg-5.13.4
  name: berg-api
  namespace: berg
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/instance: berg
    app.kubernetes.io/name: berg
    component: api
