manifests/dev/berg/Service-berg-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: berg
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: berg
  name: berg-frontend
  namespace: berg
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app.kubernetes.io/instance: berg
    app.kubernetes.io/name: berg
    component: frontend
