manifests/dev/berg/HTTPRoute-berg-api.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: berg
    app.kubernetes.io/name: berg
  name: berg-api
  namespace: berg
spec:
  hostnames:
    - api-dev.gaslightctf.cooking
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
      sectionName: websecure
  rules:
    - backendRefs:
        - kind: Service
          name: berg-api
          port: 80
      filters:
        - extensionRef:
            group: traefik.io
            kind: Middleware
            name: berg-api
          type: ExtensionRef
      matches:
        - path:
            type: PathPrefix
            value: /api
        - path:
            type: PathPrefix
            value: /swagger
        - path:
            type: Exact
            value: /.well-known/openid-configuration
        - path:
            type: Exact
            value: /.well-known/jwks
