manifests/dev/berg/HTTPRoute-berg-chall-http-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: berg-chall-http-redirect
  namespace: berg
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
      sectionName: http-chall
  rules:
    - filters:
        - requestRedirect:
            port: 1337
            scheme: https
            statusCode: 301
          type: RequestRedirect
      matches:
        - path:
            type: PathPrefix
            value: /
