manifests/dev/berg/HTTPRoute-berg-web-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: berg
    app.kubernetes.io/name: berg
  name: berg-web-redirect
  namespace: berg
spec:
  hostnames:
    - play-dev.gaslightctf.cooking
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
      sectionName: web
  rules:
    - filters:
        - requestRedirect:
            port: 443
            scheme: https
            statusCode: 301
          type: RequestRedirect
      matches:
        - path:
            type: PathPrefix
            value: /
